--- a/Ventanas/EditarAutorVentana.xaml
+++ b/Ventanas/EditarAutorVentana.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ProyectoRevista.Ventanas.NuevoAutorVentana"
+﻿<Window x:Class="ProyectoRevista.Ventanas.EditarAutorVentana"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProyectoRevista.Ventanas"
         mc:Ignorable="d"
         xmlns:inputLayout="http://schemas.syncfusion.com/wpf"
-        Title="Nuevo autor" 
+        Title="Editar autor" 
         Height="550" Width="350"
         ResizeMode="NoResize" 
         ShowInTaskbar="False" 
@@ -14,7 +14,7 @@
 
     <Window.Resources>
         <ControlTemplate x:Key="newButton" TargetType="{x:Type Button}">
-            <Border Padding="5" x:Name="border" CornerRadius="4" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+            <Border x:Name="border" Padding="5" CornerRadius="4" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                 <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
             </Border>
             <ControlTemplate.Triggers>
@@ -112,26 +112,28 @@
     </Window.Resources>
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <inputLayout:SfTextInputLayout Hint="Nombre" HelperText="Nombre del autor" Margin="10">
+        <inputLayout:SfTextInputLayout Hint="AutorActual.Nombre" HelperText="Nombre del autor" Margin="10">
             <TextBox x:Name="tbxNombre" Text="{Binding Path=Nombre}"></TextBox>
         </inputLayout:SfTextInputLayout>
 
         <inputLayout:SfTextInputLayout Hint="Red Social" HelperText="Nickname" Margin="10">
-            <TextBox x:Name="tbxNickName" Text="{Binding Path=Nickname}"></TextBox>
+            <TextBox x:Name="tbxNickName" Text="{Binding Path=AutorActual.Nickname}"></TextBox>
         </inputLayout:SfTextInputLayout>
 
         <inputLayout:SfTextInputLayout Hint="Red social" HelperText="Elegir la red social correspondiente" Margin="10">
-            <ComboBox x:Name="cbxRedSocial" Width="150" ItemsSource="{Binding Path=ListaRedesSociales}" SelectedItem="{Binding Path=RedSocial}"></ComboBox>
+            <ComboBox x:Name="cbxRedSocial" Width="150" ItemsSource="{Binding Path=ListaRedesSociales}" SelectedItem="{Binding Path=AutorActual.RedSocial}"></ComboBox>
         </inputLayout:SfTextInputLayout>
 
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="2">
-            <Image Source="{Binding Path=Imagen}" Height="200" Width="230"></Image>
+            <Image Source="{Binding Path=AutorActual.Image}" Height="200" Width="230"></Image>
         </Border>
 
         <DockPanel LastChildFill="False" Margin="0,10">
             <Button x:Name="btnElegirImagen" DockPanel.Dock="Left" Command="{Binding Path=SeleccionarImagenCommand}" Template="{DynamicResource newButton}">Elegir imagen</Button>
-            <Button x:Name="btnCancelar" DockPanel.Dock="Right" Command="{}" Template="{DynamicResource acceptButton}" IsDefault="True">Aceptar</Button>
-            <Button x:Name="btnAceptar" Margin="10,0" DockPanel.Dock="Right" Command="{}" Template="{DynamicResource cancelButton}" IsDefault="True">Cancelar</Button>
+            <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                <Button x:Name="btnCancelar"  Command="{}" Template="{DynamicResource cancelButton}" IsCancel="True">Cancelar</Button>
+                <Button Margin="10,0" x:Name="btnAceptar"  Command="{}" Template="{DynamicResource acceptButton}" IsDefault="True">Aceptar</Button>
+            </StackPanel>
         </DockPanel>
     </StackPanel>
 </Window>
